--- a/hw3/actions/pom.xml
+++ b/hw3/actions/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>cs6240</groupId>
-    <artifactId>hw2-spark</artifactId>
+    <artifactId>HW3-Actions</artifactId>
     <packaging>jar</packaging>
     <version>1.0</version>
     <properties>
